[#2] Completed publisher page
